--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="borderRotate02"></div>
         <h1>MR. Prado</h1>
         <h4>Satisfações amigos. Explore o que há de melhor e pague um café para o autor.</h4>
-        <a href="framework/codIdent.html">Clique aqui</a>
+        <a href="codIdent.html">Clique aqui</a>
     </div>
     <div class="borderRotate03"></div>
     <div class="borderRotate04"></div>
