--- a/codIdent.html
+++ b/codIdent.html
@@ -200,14 +200,14 @@
     <div class="webcod">
         <div id="layout">
             <h1>MR. Prado</h1>
-            <a href="../index.html">Saudações</a>
+            <a href="index.html">Saudações</a>
             <!--<a href="../framework/codIdent.html">Framework</a>-->
-            <a href="../framework/receita.html">Receita</a>
-            <a href="../tela/autor.html">Autor</a>
+            <a href="receita.html">Receita</a>
+            <a href="autor.html">Autor</a>
         </div>
         <div class="webcont">
             <h2>Estatísticas [ desktop ]</h2>
-            <img class="imgFrame" src="../framework/img/desviopadraoimg.png" alt="#">
+            <img class="imgFrame" src="desviopadraoimg.png" alt="#">
             <div>
                 <h5>Use o aplicativo para calcular variância e outras medidas<br>de dispersão. Caso queira automatizar cálculos, este algoritmo pode <br>ser útil pra você.</h5>
                 <button type="button" id="obtjs"  onclick="esgot()">Obter</button>
@@ -221,7 +221,7 @@
         </div>
         <div class="webcont">
             <h2>Ploit monitor [ desktop ]</h2>
-            <img class="imgFrame" src="../framework/img/ploitMonitor.png" alt="#">
+            <img class="imgFrame" src="ploitMonitor.png" alt="#">
             <div>
             <h5>Automação de feramentas: ip interno, ip externo, placa de rede, <br>espaço em disco local e virtual, etc. Convide o autor para tomar café.</h5>
             <button type="button" onclick="myPloit()">Obter</button>
@@ -235,7 +235,7 @@
         </div>
         <div class="webcont">
             <h2>Jr. Control  [ desktop ]</h2>
-            <img class="imgFrame" src="../framework/img/jrControl.png" alt="#">
+            <img class="imgFrame" src="jrControl.png" alt="#">
             <div>
             <h5>Para os exploradores de informações, utilize o Jr. Control<br> para o 'upload' de dados remoto. Convide o autor para tomar café.</h5>
             <button type="button" onclick=" myJR()">Obter</button>
@@ -249,7 +249,7 @@
         </div>
         <div class="webcont">
             <h2> Web Dev [ mobile/desktop ]</h2>
-            <img class="imgFrame" src="../framework/img/webdev.png" alt="#">
+            <img class="imgFrame" src="webdev.png" alt="#">
             <div>
             <h5>Para você empreendedor, garanta a página no navegador<br> web da sua empresa e venda para o mundo. <br>Convide o autor para um café.</h5>
             <button type="button" onclick=" myWeb()">Obter</button>
@@ -263,7 +263,7 @@
         </div>
         <div class="webcont">
             <h2>Vegas Suite [ desktop ]</h2>
-            <img class="imgFrame" src="../framework/img/vegasPrado.png" alt="#">
+            <img class="imgFrame" src="vegasPrado.png" alt="#">
             <div>
             <h5>Automarização de taferas: nmap, tcpdump, netstat, joomscan,<br> adb, número de celular identificador, criptografia de<br> arquivos, entre outros.</h5>
             <button type="button" onclick="myvegas()">Obter</button>
@@ -277,7 +277,7 @@
         </div>
         <div class="webcont">
             <h2> Let Saint OSINT [ mobile/desktop ]</h2>
-            <img class="imgFrameOsint" src="../framework/img/osint.jpeg" alt="#">
+            <img class="imgFrameOsint" src="osint.jpeg" alt="#">
             <div>
             <h5>Priorize técnicas e caminhos para capturar informações<br> de um alvo. Tenha em mente o seu alvo e inicie a investigação. <br>Pague um café para o autor.</h5>
             <button type="button" onclick="myOsint()">Obter</button>
@@ -291,7 +291,7 @@
         </div>
         <div class="webcont">
             <h2>iaDroid Reverse [ mobile ]</h2>
-            <img class="imgFrame" src="../framework/img/reverse.png" alt="#">
+            <img class="imgFrame" src="reverse.png" alt="#">
             <div>
             <h5>Espione dispositivos e usuários de forma remota. <br>Use com responsabilidade. Pague um café para o autor.</h5>
             <button type="button" onclick="myDroid()">Obter</button>
