--- a/autor.html
+++ b/autor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="shortcut icon" href="../framework/img/cafe.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="cafe.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mr. Prado</title>
@@ -289,7 +289,7 @@
             <h5>Analista de segurança cibernética.</h5>
             <!--<a href="../framework/codIdent.html">Clique aqui</a>-->
             <a href="https://wa.me/qr/UMI2DYC6U62LF1">Convite</a>
-            <a href="../framework/codIdent.html">Voltar</a>
+            <a href="codIdent.html">Voltar</a>
         <div class="icon">
             <a style="font-size:12px;" href="https://mail.google.com/mail/u/0/#inbox?compose=jrjtXDzghxDzqGdLndkrjjkGZhFQxtWwczLDwzWxrhDtdfNGvNPpQVWWMVnsFKBgpQTnGxfg">E-mail<ion-icon name="mail-outline"></ion-icon></a>
             <a style="font-size:12px;"href="https://www.instagram.com/msf_lairton/">Instagram<ion-icon name="send-outline"></ion-icon></ion-icon></a>
