--- a/receita.html
+++ b/receita.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="shortcut icon" href="..framework/img/cafe.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="cafe.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mr. Prado</title>
@@ -263,14 +263,14 @@
     <div class="borderTela05"></div>
     <div class="layoutTela">
         <div class="telaImg">
-            <img src="../framework/img/a8.png" alt="">
+            <img src="a8.png" alt="">
         </div>
         <div class="TelaInfor">
             <h2>Três quadros para decoração</h2>
             <p>Para os ousados ter coragem é essnecial. Mas não se limite, <br>à essência do mundo é pra quem tem bom gosto. </p>
             <!--<a href="../framework/codIdent.html">Clique aqui</a>-->
             <button type="button" onclick="myobtcript()">Obter</button>
-            <a href="../framework/codIdent.html" style="text-decoration:solid;color:white;">Voltar</a>
+            <a href="codIdent.html" style="text-decoration:solid;color:white;">Voltar</a>
         </div>
     </div>
     <div class="borderTela"></div>
