--- a/autor.html
+++ b/autor.html
@@ -282,7 +282,7 @@
     <div class="borderTela05"></div>
     <div class="layoutTela">
         <div class="telaImg">
-            <img src="../framework/img/autor.jpg" alt="">
+            <img src="autor.jpg" alt="">
         </div>
         <div class="TelaInfor">
             <h2>Lairton Povoas Garreto</h2>
