--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Mr. Prado</title>
     <link rel="shortcut icon" href="" type="image/x-icon">
-    <script src="framework/codIdent.js"></script>
+    <script src="codIdent.js"></script>
     <style>
         body {
             background: black;
