--- a/codIdent.html
+++ b/codIdent.html
@@ -251,7 +251,7 @@
             <h2> Web Dev [ mobile/desktop ]</h2>
             <img class="imgFrame" src="webdev.png" alt="#">
             <div>
-            <h5>Para você empreendedor, garanta a página no navegador<br> web da sua empresa e venda para o mundo. <br>Convide o autor para um café.</h5>
+            <h5>Para você empreendedor, garanta a página no navegador<br> web da sua empresa e compartilhe para o mundo. <br>Convide o autor para um café.</h5>
             <button type="button" onclick=" myWeb()">Obter</button>
             <a href="#">acessar</a>
             </div>
@@ -262,10 +262,10 @@
             <div class="cb05" style="background: rgb(174, 211, 9); animation: fadeID 6s infinite;"></div>
         </div>
         <div class="webcont">
-            <h2>Vegas Suite [ desktop ]</h2>
+            <h2>Vegas Suite [ desktop ] </h2> 
             <img class="imgFrame" src="vegasPrado.png" alt="#">
             <div>
-            <h5>Automarização de taferas: nmap, tcpdump, netstat, joomscan,<br> adb, número de celular identificador, criptografia de<br> arquivos, entre outros.</h5>
+            <h5>Framework capaz de controlar o hardware(teclas, câmera, placa, media, etc) do dispositivo. Uso pessoal ou trabalho.</h5>
             <button type="button" onclick="myvegas()">Obter</button>
             <a href="#">acessar</a>
             </div>
@@ -281,7 +281,7 @@
             <div>
             <h5>Priorize técnicas e caminhos para capturar informações<br> de um alvo. Tenha em mente o seu alvo e inicie a investigação. <br>Pague um café para o autor.</h5>
             <button type="button" onclick="myOsint()">Obter</button>
-            <a href="#">acessar</a>
+            <a href="#">acessar</a> 
             </div>
             <div class="cb" style="background: green;"></div>
             <div class="cb02" style="background: rgb(8, 204, 50); animation: fadeID 3s infinite;"></div>
@@ -290,12 +290,12 @@
             <div class="cb05" style="background: rgb(174, 211, 9); animation: fadeID 6s infinite;"></div>
         </div>
         <div class="webcont">
-            <h2>iaDroid Reverse [ mobile ]</h2>
+            <h2> Espelho [ mobile ]</h2>
             <img class="imgFrame" src="reverse.png" alt="#">
             <div>
-            <h5>Espione dispositivos e usuários de forma remota. <br>Use com responsabilidade. Pague um café para o autor.</h5>
+            <h5>Espelhe seu dispositivo de forma remota. Pague um café para o autor.</h5>
             <button type="button" onclick="myDroid()">Obter</button>
-            <a href="#">acessar</a>
+            <a href="#">acessar</a> 
             </div>
             <div class="cb" style="background: green;"></div>
             <div class="cb02" style="background: rgb(8, 204, 50); animation: fadeID 3s infinite;"></div>
