--- a/codIdent.html
+++ b/codIdent.html
@@ -265,7 +265,7 @@
             <h2>Vegas Suite [ desktop ] </h2> 
             <img class="imgFrame" src="vegasPrado.png" alt="#">
             <div>
-            <h5>Framework capaz de controlar o hardware(teclas, câmera, placa, media, etc) do dispositivo. Uso pessoal ou trabalho.</h5>
+            <h5>Framework capaz de controlar o hardware(teclas, câmera, <br>placa, media, etc) do dispositivo. Uso pessoal ou trabalho.</h5>
             <button type="button" onclick="myvegas()">Obter</button>
             <a href="#">acessar</a>
             </div>
