--- a/codIdent.html
+++ b/codIdent.html
@@ -209,7 +209,7 @@
             <h2>Estatísticas [ desktop ]</h2>
             <img class="imgFrame" src="desviopadraoimg.png" alt="#">
             <div>
-                <h5>Use o aplicativo para calcular variância e outras medidas<br>de dispersão. Caso queira automatizar cálculos, este algoritmo pode <br>ser útil pra você.</h5>
+                <h5>Use para análise de dados(sustentabilidade, vendas, gastos, etc)</h5>
                 <button type="button" id="obtjs"  onclick="esgot()">Obter</button>
                 <a href="#">acessar</a>
             </div>
@@ -237,7 +237,7 @@
             <h2>Jr. Control  [ desktop ]</h2>
             <img class="imgFrame" src="jrControl.png" alt="#">
             <div>
-            <h5>Para os exploradores de informações, utilize o Jr. Control<br> para o 'upload' de dados remoto. Convide o autor para tomar café.</h5>
+            <h5>Para os exploradores de informações, utilize o Jr. Control<br> para o 'upload' de dados remoto. Convide oautor para tomar café.</h5>
             <button type="button" onclick=" myJR()">Obter</button>
             <a href="#">acessar</a>
             </div>
@@ -251,7 +251,7 @@
             <h2> Web Dev [ mobile/desktop ]</h2>
             <img class="imgFrame" src="webdev.png" alt="#">
             <div>
-            <h5>Para você empreendedor, garanta a página no navegador<br> web da sua empresa e compartilhe para o mundo. <br>Convide o autor para um café.</h5>
+            <h5>Personalize uma página no navegador web e compartilhe para o mundo. <br>Convide o autor para um café.</h5>
             <button type="button" onclick=" myWeb()">Obter</button>
             <a href="#">acessar</a>
             </div>
@@ -265,7 +265,7 @@
             <h2>Vegas Suite [ desktop ] </h2> 
             <img class="imgFrame" src="vegasPrado.png" alt="#">
             <div>
-            <h5>Framework capaz de controlar o hardware(teclas, câmera, <br>placa, media, etc) do dispositivo. Uso pessoal ou trabalho.</h5>
+            <h5>Framework capaz de controlar o hardware (teclas, câmera, <br>placa, media, etc) do dispositivo. Uso pessoal ou trabalho.</h5>
             <button type="button" onclick="myvegas()">Obter</button>
             <a href="#">acessar</a>
             </div>
