--- a/codIdent.html
+++ b/codIdent.html
@@ -209,7 +209,7 @@
             <h2>Estatísticas [ desktop ]</h2>
             <img class="imgFrame" src="desviopadraoimg.png" alt="#">
             <div>
-                <h5>Use para análise de dados(sustentabilidade, vendas, gastos, etc)</h5>
+                <h5>Use para análise de dados (sustentabilidade, vendas, gastos, etc)</h5>
                 <button type="button" id="obtjs"  onclick="esgot()">Obter</button>
                 <a href="#">acessar</a>
             </div>
@@ -251,7 +251,7 @@
             <h2> Web Dev [ mobile/desktop ]</h2>
             <img class="imgFrame" src="webdev.png" alt="#">
             <div>
-            <h5>Personalize uma página no navegador web e compartilhe para o mundo. <br>Convide o autor para um café.</h5>
+            <h5>Personalize uma página no navegador web e compartilhe <br>para o mundo. Convide o autor para um café.</h5>
             <button type="button" onclick=" myWeb()">Obter</button>
             <a href="#">acessar</a>
             </div>
