--- a/receita.html
+++ b/receita.html
@@ -267,7 +267,7 @@
         </div>
         <div class="TelaInfor">
             <h2>Três quadros para decoração</h2>
-            <p>Para os ousados ter coragem é essnecial. Mas não se limite, <br>à essência do mundo é pra quem tem bom gosto. </p>
+            <p>Para os ousados ter coragem é essencial. Mas não se limite, <br>à essência do mundo é pra quem tem bom gosto. </p>
             <!--<a href="../framework/codIdent.html">Clique aqui</a>-->
             <button type="button" onclick="myobtcript()">Obter</button>
             <a href="codIdent.html" style="text-decoration:solid;color:white;">Voltar</a>
