--- a/room-index.html
+++ b/room-index.html
@@ -125,9 +125,9 @@ function aa() {
 <section>
   <nav>
     <ul>
-      <li><a href="#" onclick="aa()">Como Criar?</a></li>
-      <li><a href="#" onclick="bb()">É seguro?</a></li>
-      <li><a href="#" onclick="cc()">Qual a taxa de câmbio?</a></li>
+      <li><a onclick="aa()">Como Criar?</a></li>
+      <li><a onclick="bb()">É seguro?</a></li>
+      <li><a onclick="cc()">Qual a taxa de câmbio?</a></li>
     </ul>
   </nav>
   
