--- a/room-index.html
+++ b/room-index.html
@@ -125,9 +125,9 @@ function aa() {
 <section>
   <nav>
     <ul>
-      <li><a onclick="aa()">Como Criar?</a></li>
-      <li><a onclick="bb()">É seguro?</a></li>
-      <li><a onclick="cc()">Qual a taxa de câmbio?</a></li>
+      <li><a onclick="aa()" style="text-decoration:underline">Como Criar?</a></li>
+      <li><a onclick="bb()" style="text-decoration:underline">É seguro?</a></li>
+      <li><a onclick="cc()" style="text-decoration:underline">Qual a taxa de câmbio?</a></li>
     </ul>
   </nav>
   
