--- a/room-index.html
+++ b/room-index.html
@@ -139,7 +139,7 @@ function aa() {
 </section>
 
 <footer>
-  <p>"Não precisa de informações suas quando o assunto é privacidade."</p>
+  <p>"Não precisa de suas informações quando o assunto é privacidade."</p>
 </footer>
 <script>
 
