--- a/room-index.html
+++ b/room-index.html
@@ -90,9 +90,8 @@ h2{font-size:20px;}
 function aa() {
      const a = document.querySelector("article");
      a.innerHTML =`<h1>Salve o contato</h1>
-    <p>=> +55 98 984506088</p>
     <p> Por 50 reais eu te ensino como ter uma carteira. Caso tenha saldo, posso comprar criptos, ou seja, você pode me vender suas criptomoedas. <i>Faça isso somente se estiver interessado.</i></p>
-    <p>Envie uma mensegem: "Quero saber mais.."</p>`;
+    <p>email: atemporalestrelas@gmail.com</p>`;
     }
     function bb() {
      const b = document.querySelector("article");
@@ -109,7 +108,7 @@ function aa() {
 </script>
 
 <h2>Carteira Privada</h2>
-<p>Para que isso funcione é necessário ter o proṕrio sistema induzido independente, sendo gerido por vonluntários. Na antiga idade o ouro e a prata eram transitados entre comunidades, cada um oferecia a resolução de problemas de outros em troca de algo. Muitas das vezes, não existia um valor definido como hoje em dia.</p>
+<p>Para que isso funcione é necessário ter o proṕrio sistema induzido independente, sendo gerido por voluntários. Na antiga idade o ouro e a prata eram transitados entre comunidades, cada um oferecia a resolução de problemas de outros em troca de algo. Muitas das vezes, não existia um valor definido como hoje em dia.</p>
 <p>Os bancos trandicionais seguem protocolos (KYC) de reponsabilidade do Governo Federal. O saldo, transferências e sumiço de grana em conta bancária são teleguiado por diretrizes e compromisso indicado. Por outro lado, a carteira privada substitui a presença política com textos aleatórios e um backup.</p>
  <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHVzMXRmeHEwd2s3bmVqYWx2eXRjcHliaGxpeTR2NWYxYW1iOXc0NyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oEhmY0bCU2uKEsxpe/giphy.gif" id="imagem">
   <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOGQ2dGVudmdpd2xjaGwzdXhqNWlicnhpbW5tOGUzcGtzNGRsbjZxYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oz8xvNZnAM5xd2nAc/giphy.gif" id="imagem">
