--- a/room-index.html
+++ b/room-index.html
@@ -92,7 +92,7 @@ function aa() {
      a.innerHTML =`<h1>Salve o contato</h1>
     <p> Por 50 reais eu te ensino como ter uma carteira. Caso tenha saldo, posso comprar criptos, ou seja, você pode me vender suas criptomoedas. <i>Faça isso somente se estiver interessado.</i></p>
     <p>email: atemporalestrelas@gmail.com</p>
-    <a href'img/pag-in.html'>CLIQUE AQUI !!!</a>`;
+    <a href='img/pag-in.html'>CLIQUE AQUI !!!</a>`;
     }
     function bb() {
      const b = document.querySelector("article");
