--- a/room-index.html
+++ b/room-index.html
@@ -103,8 +103,8 @@ function aa() {
     function cc() {
      const c = document.querySelector("article");
      c.innerHTML =`<h1>Não há valor fixo</h1>
-    <p>Isso significa que pode mudar conforme o valor da transação eletrônica.</p>
-    <p> Sendo assim será definido na hora.<p>`;
+    <p>Os valores mudam conforme o poder de comprar da pessoa.</p>
+    <p>Não será muito.<p>`;
     }
 </script>
 
