--- a/room-index.html
+++ b/room-index.html
@@ -16,7 +16,7 @@ body {
 
 /* Style the header */
 header {
-  background-color:#B0E0E6;
+  background-color:#27F580;
   padding: 30px;
   text-align: center;
   font-size: 35px;
@@ -35,7 +35,7 @@ nav {
   float: left;
   width: 30%;
   height: 300px; /* only for demonstration, should be removed */
-  background:#B0E0E6;
+  background:#27F5CC;
   padding: 20px;
 }
 
