--- a/room-index.html
+++ b/room-index.html
@@ -62,7 +62,7 @@ section::after {
 
 /* Style the footer */
 footer {
-  background-color: #B0E0E6;
+  background-color: green;
   padding: 10px;
   text-align: center;
   
