--- a/room-index.html
+++ b/room-index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Carteira Privada(xmr)</title>
+<title>Invista na Diversão</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -10,17 +10,17 @@
 }
 
 body {
-  background-color:#84F527;
+  background-color:black;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Style the header */
 header {
-  background-color:#27F580;
+  background-color:#000;
   padding: 30px;
   text-align: center;
   font-size: 35px;
-  color: #000;
+  color: #fff;
   display: contents;
 }
 #imagem {
@@ -35,7 +35,7 @@ nav {
   float: left;
   width: 30%;
   height: 300px; /* only for demonstration, should be removed */
-  background:#27F5CC;
+  background:black;
   padding: 20px;
 }
 
@@ -49,7 +49,7 @@ article {
   float: left;
   padding: 20px;
   width: 70%;
-  background-color: #D8BFD8;
+  background-color: black;
   height: 300px; /* only for demonstration, should be removed */
 }
 
@@ -62,7 +62,7 @@ section::after {
 
 /* Style the footer */
 footer {
-  background-color: green;
+  background-color: black;
   padding: 10px;
   text-align: center;
   
@@ -132,9 +132,10 @@ function aa() {
   </nav>
   
   <article>
-    <h1>É possível comprar criptomoedas com redução de preço?</h1>
-    <p>Sim...</p>
-    <p>No entanto tenha certeza do emissário da cripto.</p>
+    <h1>Chegou o momento de ajudar os animais...</h1>
+    <p>Compre Helicopteros e comprará TRX.</p>
+    <p>Preciso de instabilidade para ter algo no futuro. var One_coinTRX = '7 USD';</p><br>
+    <p>Para que isso aconteça, tenho que investir em diversão e humanidade. Ajude os animais de rua, compre helicópteros.</p>
   </article>
 </section>
 
