--- a/room-index.html
+++ b/room-index.html
@@ -10,13 +10,14 @@
 }
 
 body {
-  background-color:black;
+  color:fff;
+  background:#000;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Style the header */
 header {
-  background-color:#000;
+  background:#000;
   padding: 30px;
   text-align: center;
   font-size: 35px;
