--- a/room-index.html
+++ b/room-index.html
@@ -36,7 +36,7 @@ nav {
   float: left;
   width: 30%;
   height: 300px; /* only for demonstration, should be removed */
-  background:black;
+  background:#03031A;
   padding: 20px;
 }
 
