--- a/room-index.html
+++ b/room-index.html
@@ -91,15 +91,15 @@ h2{font-size:20px;}
 function aa() {
      const a = document.querySelector("article");
      a.innerHTML =`<h1>Salve o contato</h1>
-    <p> Por 50 reais eu te ensino como ter uma carteira. Caso tenha saldo, posso comprar criptos, ou seja, você pode me vender suas criptomoedas. <i>Faça isso somente se estiver interessado.</i></p>
-    <p>email: atemporalestrelas@gmail.com</p>
-    <a href='img/pag-on.html'>CLIQUE AQUI !!!</a>`;
+    <p>Tenha sua carteira gratuita e compre produtos com criptomoedas.<i>Faça isso somente se estiver interessado.</i></p>
+    <p>Jogue Aéreo Pro e consiga cupons</p>
+    <a href='img/pag-on.html'>IR PARA O JOGO CLIQUE AQUI !!!</a>`;
     }
     function bb() {
      const b = document.querySelector("article");
      b.innerHTML =`<h1>Depende...</h1>
     <p>Para ser seguro você precisa manter os protocolos de segurança.</p>
-    <p> Porém qualquer um pode invadir a sua casa e roubar você.</p>`;
+    <p> Porém qualquer um pode invadir a sua casa e roubar você, gurade sua semente ou chave pública em local seguro.</p>`;
     }
     function cc() {
      const c = document.querySelector("article");
