--- a/room-index.html
+++ b/room-index.html
@@ -91,7 +91,7 @@ h2{font-size:20px;}
 function aa() {
      const a = document.querySelector("article");
      a.innerHTML =`<h1>Salve o contato</h1>
-    <p>Tenha sua carteira gratuita e compre produtos com criptomoedas.<i>Faça isso somente se estiver interessado.</i></p>
+    <p>Tenha sua carteira gratuita e compre produtos com criptomoedas. <i>Faça isso somente se estiver interessado.</i></p>
     <p>Jogue Aéreo Pro e consiga cupons</p>
     <a href='img/pag-on.html'>IR PARA O JOGO CLIQUE AQUI !!!</a>`;
     }
@@ -99,12 +99,12 @@ function aa() {
      const b = document.querySelector("article");
      b.innerHTML =`<h1>Depende...</h1>
     <p>Para ser seguro você precisa manter os protocolos de segurança.</p>
-    <p> Porém qualquer um pode invadir a sua casa e roubar você, gurade sua semente ou chave pública em local seguro.</p>`;
+    <p> Porém qualquer um pode invadir a sua casa e roubar você, guarde sua semente ou chave pública em local seguro.</p>`;
     }
     function cc() {
      const c = document.querySelector("article");
      c.innerHTML =`<h1>Não há valor fixo</h1>
-    <p>Os valores mudam conforme o poder de comprar da pessoa.</p>
+    <p>Os valores mudam conforme o poder de compra.</p>
     <p>Não será muito.<p>`;
     }
 </script>
@@ -140,7 +140,7 @@ function aa() {
   <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHhlbzhsMTFocmQ4eWFtZ2JuYWczdnU5bmtxOWd2OWhhazk3ZWp2ayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ndTqzJcE0jjoluaLMb/giphy.gif" id="imagem">
  
 <footer>
-  <p>"Não precisa de suas informações quando o assunto é privacidade."</p>
+  <p>"Lembre-se disto! A dor do próximo pode ser compreendida de forma mafiosa e articulada. Acredite, é possível animais saberem pilotar."</p>
 </footer>
 <script>
 
