--- a/room-index.html
+++ b/room-index.html
@@ -63,7 +63,7 @@ section::after {
 
 /* Style the footer */
 footer {
-  background-color: black;
+  background-color: #03031A;
   padding: 10px;
   text-align: center;
   
