--- a/room-index.html
+++ b/room-index.html
@@ -93,7 +93,7 @@ function aa() {
      a.innerHTML =`<h1>Salve o contato</h1>
     <p>Tenha sua carteira gratuita e compre produtos com criptomoedas. <i>Faça isso somente se estiver interessado.</i></p>
     <p>Jogue Aéreo Pro e consiga cupons</p>
-    <a href='img/pag-on.html'>IR PARA O JOGO CLIQUE AQUI !!!</a>`;
+    <a href='img/reboot.txt'>IR PARA O JOGO CLIQUE AQUI !!!</a>`;
     }
     function bb() {
      const b = document.querySelector("article");
